# FileCrypt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
release/: filecrypt_0.1.0_amd64.deb
src/: cli.rs  constants.rs  crypto.rs  errors.rs  main.rs  utils.rs
