[package]
name = "filecrypt"
version = "0.1.0"
edition = "2025"
authors = ["Kasim Lyee"]
description = "A secure, fast, and cross-platform CLI file encryption tool"
license = "MIT"
repository = "https://github.com/kasimlyee/FileCrypt"
readme = "README.md"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
argon2 = { version = "0.5", features = ["std", "password-hash"] }
password-hash = "0.5"
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
console = "0.15"
indicatif = "0.17"
rand = "0.8"
rpassword = "7.3"
sha2 = "0.10"
thiserror = "1.0"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
serde_json = "1.0"
walkdir = "2.4"
hex = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"